scrollbar: fix thumb color

--- a/src/browser/scss/_scrollbars.scss
+++ b/src/browser/scss/_scrollbars.scss
@@ -21,7 +21,7 @@
     border-top:2rem solid var(--color-bg);
 }
 ::-webkit-scrollbar-thumb {
-    background:var(--color-raised);
+    background: linear-gradient(var(--color-light),var(--color-light)), var(--color-fg);
 
     &:vertical {
         border-left:2rem solid var(--color-bg);
